--- a/pod.yml
+++ b/pod.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
-kind: pod
+kind: Pod
 metadata:
   name: pod1
- spec:
+spec:
   containers:
   - name: nginx-arjun
     image: nginx
